<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>
    <string name="app_name">Coder\'s Best Friend</string>
    <string-array name="nav_items">
        <item>Tasks</item>
        <item>Design</item>
        <item>Timer</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>

    <string name="task_title">Add a Task</string>

    <!-- New project label definitions -->
    <string name="prompt_title" >Title</string>
    <string name="prompt_desc" >Description</string>
    <string name="prompt_tags" >Associated Tags</string>

    <!-- Tag label definitions -->
    <string name="level" >Importance</string>
    <string name="level_bad" >Minor</string>
    <string name="level_terrible" >Major</string>
    <string name="type" >Issue Type</string>
    <string name="type_bug" >Bug</string>
    <string name="type_spec" >Spec</string>
    <string name="end" > Project End</string>
    <string name="end_front" >Front-End</string>
    <string name="end_back" >Back-End</string>
    <string name="category_prompt">Choose a tag</string>

    <string name="filter_label">Filter:</string>
    <string name="tasks_label">Tasks</string>
    <string-array name="filter_list">
        <item>All</item>
        <item>Bug</item>
        <item>Spec</item>
        <item>Front-end</item>
        <item>Back-end</item>
        <item>Minor</item>
        <item>Major</item>
    </string-array>

    <!-- Timer -->
    <string name="timer">"Set Timer"</string>
    <string name="timer_button">"Start Timer"</string>
    <string name="timer_button_stop">"Stop Timer"</string>
    <string name="timer_error">""</string>
</resources>
